# mac-tts-stt-audio-bridge

./: .gitignore  CMakeLists.txt  README.md
config/: config.example.json
scripts/: install_driver.sh  launch_companion.sh
src/app/: main.mm
src/common/: SharedMemoryAudioRing.cpp  SharedMemoryAudioRing.h
src/driver/: Info.plist.in  VirtualAudioDriver.cpp
swift/: Package.swift
swift/Sources/BridgeCompanion/: main.swift
swift/Sources/EngineHelper/: main.swift
